<?xml version="1.0"?>
<package>
  <name>quadrotor_projection_process_modules</name>
  <version>0.0.0</version>
  <description>The quadrotor_projection_process_modules package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="yazdani@todo.todo">yazdani</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/quadrotor_projection_process_modules</url> -->


  <!-- Author tags are optional, mutiple are allowed, one per tag -->
  <!-- Authors do not have to be maintianers, but could be -->
  <!-- Example: -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->


  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use run_depend for packages you need at runtime: -->
  <!--   <run_depend>message_runtime</run_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>alexandria</build_depend>
  <build_depend>cl_tf</build_depend>
  <build_depend>cl_transforms</build_depend>
  <build_depend>cram_bullet_reasoning</build_depend>
  <build_depend>cram_bullet_reasoning_belief_state</build_depend>
  <build_depend>cram_bullet_reasoning_designators</build_depend>
  <build_depend>cram_designators</build_depend>
  <build_depend>cram_occasions_events</build_depend>
  <build_depend>cram_plan_failures</build_depend>
  <build_depend>cram_plan_library</build_depend>
  <build_depend>cram_plan_occasions_events</build_depend>
  <build_depend>cram_process_modules</build_depend>
  <build_depend>cram_projection</build_depend>
  <build_depend>cram_quadrotor_designators</build_depend>
  <build_depend>cram_robot_interfaces</build_depend>
  <build_depend>cram_roslisp_common</build_depend>
  <build_depend>cram_roslisp_common</build_depend>
  <build_depend>cram_semantic_map</build_depend>
  <build_depend>cram_semantic_map_utils</build_depend>
  <build_depend>cram_transforms_stamped</build_depend>
  <run_depend>alexandria</run_depend>
  <run_depend>cl_tf</run_depend>
  <run_depend>cl_transforms</run_depend>
  <run_depend>cram_bullet_reasoning</run_depend>
  <run_depend>cram_bullet_reasoning_belief_state</run_depend>
  <run_depend>cram_bullet_reasoning_designators</run_depend>
  <run_depend>cram_designators</run_depend>
  <run_depend>cram_occasions_events</run_depend>
  <run_depend>cram_plan_failures</run_depend>
  <run_depend>cram_plan_library</run_depend>
  <run_depend>cram_plan_occasions_events</run_depend>
  <run_depend>cram_process_modules</run_depend>
  <run_depend>cram_projection</run_depend>
  <run_depend>cram_quadrotor_designators</run_depend>
  <run_depend>cram_robot_interfaces</run_depend>
  <run_depend>cram_roslisp_common</run_depend>
  <run_depend>cram_semantic_map</run_depend>
  <run_depend>cram_semantic_map_utils</run_depend>
  <run_depend>cram_transforms_stamped</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>